# ChronicleVM

./: .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yml
crates/chronicle-asm/: Cargo.toml
crates/chronicle-asm/src/: lib.rs
crates/chronicle-cli/: Cargo.toml
crates/chronicle-cli/benches/: overheads.rs
crates/chronicle-cli/benches/fixtures/: plugin.casm  plugin.chr
crates/chronicle-cli/src/: main.rs
crates/chronicle-cli/tests/: cli.rs
crates/chronicle-core/: Cargo.toml
crates/chronicle-core/src/: lib.rs
crates/chronicle-embed-demo/: Cargo.toml
crates/chronicle-embed-demo/src/: main.rs
crates/chronicle-embed-demo/tests/: embed_demo.rs
crates/chronicle-lang/: Cargo.toml
crates/chronicle-lang/src/: lib.rs
docs/: HANDOFF_SECURITY_HARDENING_05_12_08_08.md  benchmarks.md  capabilities.md  index.html  security.md  site.css  trace-replay.md  verifier.md
docs/trace-viewer/: app.js  index.html  styles.css
examples/: audit-plugin.chr  audit-policy.toml  branch.casm  clock.casm  embedded-plugin.chr  embedded-policy.toml  hello.casm  language-demo.chr  malicious-plugin.chr  mock-policy.toml  plugin-deny.toml  plugin-grant.toml  plugin-mock.toml  plugin.casm  plugin.chr  policy.toml
tools/trace-viewer/: app.js  index.html  styles.css
