[workspace]
members = [
    "crates/chronicle-core",
    "crates/chronicle-asm",
    "crates/chronicle-lang",
    "crates/chronicle-cli",
]
resolver = "2"

[workspace.package]
edition = "2021"
license = "MIT"
version = "0.1.0"

[workspace.dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
toml = "0.8"
