[package]
name = "chronicle-cli"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "chronicle"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
chronicle-asm = { path = "../chronicle-asm" }
chronicle-core = { path = "../chronicle-core" }
chronicle-lang = { path = "../chronicle-lang" }
clap.workspace = true
serde.workspace = true
serde_json.workspace = true
toml.workspace = true
